--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "uiuc-mcs-requirements",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://kmint1819.github.io/UIUC-MCS-Requirements/",
   "private": false,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "browserslist": "^4.21.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
