--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uiuc-mcs-requirements",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://kmint1819.github.io/UIUC-MCS-Requirements/",
   "private": false,
   "dependencies": {
@@ -10,11 +10,16 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@tanstack/react-table": "^8.8.5",
     "browserslist": "^4.21.5",
-    "material-table": "^1.63.0",
+    "material-react-table": "^1.9.3",
+    "material-table": "^1.9.0",
+    "material-table-jspdf-fix": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-double-scrollbar": "^0.0.15",
+    "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
@@ -22,7 +27,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
