--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
     "env": {
         "browser": true,
-        "es2021": true,
-        "node": true
+        "es2021": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended"
+    ],
+    "overrides": [
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -15,7 +16,6 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "parser": "babel-eslint",
     "plugins": [
         "react"
     ],
