--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
     "gh-pages": "^5.0.0"
   },
   "scripts": {
